Fix layout issues on small screens.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 1.5rem;
+  font-size: 0.875rem;
 }
 
 .feather {
@@ -85,13 +85,14 @@ body {
 .navbar-brand {
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-  font-size: 2rem;
+  font-size: 1.25rem;
   font-weight: 700;
-  padding-top: 1rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .navbar .navbar-toggler {
-  top: .25rem;
+  top: 0.5rem;
   right: 1rem;
 }
 
